Version 0.5.0 ()
	add, darkmode for administration available in general settings
	update, news removed because it is the same as articles
	update, installer
	update, clean code
	update, twbs/bootstrap (4.1.1 => 4.1.2)
	update, tinymce/tinymce (4.7.13 => 4.8.0)
Version 0.4.1 (2018-07-12)
	bugfix, article can be created again
	bugfix, protocol in installer shows the config-file correctly
Version 0.4.0 (2018-07-05)
	added, new functionality
		You can delete pages in pages from now.
	update, translations
	update, optical improvements
	update, fixed minor bugs
Version 0.3.0 (2018-06-25)
	added, support for bootstrap cards on mainpage.
		If you write an article, you see this article on mainpage in a bootstrap card.
		Up to three bootstrap cards can be placed on mainpage.
	added, edit page function
		You can edit a created page from now.
	update, optical improvements
	update, rename functions
Version 0.2.7 (2018-06-08)
	added, MIT-License translations in german, russian. It can be found in the docs-directory
	added, edit function for pages
	update, composer (1.4.3=>1.6.5)
Version 0.2.6 (2018-05-31)
	bugfix, fixed minor bugs
	update, refactory functions
Version 0.2.5 (2018-05-18)
	Warning!!! This Version is not compatible to early Versions of heinerCMS any more.
	bugfix, fixed minor bugs
	update, rename table cels
	update, tinymce/tinymce (4.7.12 => 4.7.13)
	update, many new comments for 'old' functions
Version 0.2.4.1 (2018-05-11)
	bugfix, SQLSTATE[HY000] [2002] php_network_getaddresses: getaddrinfo failed: Name or service not known
Version 0.2.4 (2018-05-11)
	add, installer create sqlite database for heinercms
	bugfix, fixed bugs in installer
	update, tinymce/tinymce (4.7.11 => 4.7.12)
Version 0.2.3.1 (2018-05-07)
	update, update the configuration file for the installer
Version 0.2.3 (2018-05-04)
	added, sqlite database support for heinercms
	added, database debug options for developers
	bugfix, fixed bugs in public downloads section